gccida/g0/reload_cse_move2add
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_cse_move2add/src/reload1.c:9634:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
pat = ( rtx)first[2]; 
            ^~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_cse_move2add/src/reload1.c:9641:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
src = ( rtx)pat[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_cse_move2add/src/reload1.c:9650:23: error: use of undeclared identifier 'machine_mode'
v1 = sext_for_mode( ( machine_mode)*( ( unsigned __int8 *)reg + 2), src->fld[0].rtwint - reg_offset_0[regno]); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_cse_move2add/src/reload1.c:9650:90: error: use of undeclared identifier 'reg_offset_0'; did you mean 'reg_offset'?
v1 = sext_for_mode( ( machine_mode)*( ( unsigned __int8 *)reg + 2), src->fld[0].rtwint - reg_offset_0[regno]); 
                                                                                         ^~~~~~~~~~~~
                                                                                         reg_offset
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_cse_move2add/src/reload1.c:9092:22: note: 'reg_offset' declared here
static HOST_WIDE_INT reg_offset[FIRST_PSEUDO_REGISTER];
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_cse_move2add/src/reload1.c:9670:1: error: use of undeclared identifier 'reg_offset_0'; did you mean 'reg_offset'?
reg_offset_0[regno] = src->fld[0].rtwint; 
^~~~~~~~~~~~
reg_offset
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_cse_move2add/src/reload1.c:9092:22: note: 'reg_offset' declared here
static HOST_WIDE_INT reg_offset[FIRST_PSEUDO_REGISTER];
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_cse_move2add/src/reload1.c:9682:13: error: expected identifier or '('
 struct set = 0LL; 
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_cse_move2add/src/reload1.c:9688:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v4 = ( rtx)next[2]; 
           ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_cse_move2add/src/reload1.c:9696:13: error: expected identifier or '('
 struct set = v4; 
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_cse_move2add/src/reload1.c:9698:7: error: expected expression
if (  struct set 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_cse_move2add/src/reload1.c:9706:15: error: use of undeclared identifier 'reg_offset_0'; did you mean 'reg_offset'?
base_offset = reg_offset_0[src->fld[0].rtuint]; 
              ^~~~~~~~~~~~
              reg_offset
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_cse_move2add/src/reload1.c:9092:22: note: 'reg_offset' declared here
static HOST_WIDE_INT reg_offset[FIRST_PSEUDO_REGISTER];
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_cse_move2add/src/reload1.c:9708:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)reg + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_cse_move2add/src/reload1.c:9709:30: error: use of undeclared identifier 'reg_offset_0'; did you mean 'reg_offset'?
added_offset + base_offset - reg_offset_0[regno]); 
                             ^~~~~~~~~~~~
                             reg_offset
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_cse_move2add/src/reload1.c:9092:22: note: 'reg_offset' declared here
static HOST_WIDE_INT reg_offset[FIRST_PSEUDO_REGISTER];
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_cse_move2add/src/reload1.c:9729:1: error: use of undeclared identifier 'reg_offset_0'; did you mean 'reg_offset'?
reg_offset_0[regno] = sext_for_mode( ( machine_mode)*( ( unsigned __int8 *)reg + 2), base_offset + added_offset); 
^~~~~~~~~~~~
reg_offset
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_cse_move2add/src/reload1.c:9092:22: note: 'reg_offset' declared here
static HOST_WIDE_INT reg_offset[FIRST_PSEUDO_REGISTER];
                     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_cse_move2add/src/reload1.c:9729:40: error: use of undeclared identifier 'machine_mode'
reg_offset_0[regno] = sext_for_mode( ( machine_mode)*( ( unsigned __int8 *)reg + 2), base_offset + added_offset); 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_cse_move2add/src/reload1.c:9734:54: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( note = first[3].fld[0].rtx; note; note = ( rtx)note[1] ) 
                                                     ^~~~~~~
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_cse_move2add/src/obj/reload1.o] Error 1
